@@ -39,7 +39,6 @@ FunctionalChaosResult::FunctionalChaosResult()
   , distribution_()
   , transformation_()
   , inverseTransformation_()
-  , composedModel_()
   , orthogonalBasis_()
   , I_(0)
   , alpha_k_(0, 0)
@@ -55,7 +54,6 @@ FunctionalChaosResult::FunctionalChaosResult(const Sample & inputSample,
     const Distribution & distribution,
     const Function & transformation,
     const Function & inverseTransformation,
-    const Function & composedModel,
     const OrthogonalBasis & orthogonalBasis,
     const Indices & I,
     const Sample & alpha_k,
@@ -66,46 +64,11 @@ FunctionalChaosResult::FunctionalChaosResult(const Sample & inputSample,
   , distribution_(distribution)
   , transformation_(transformation)
   , inverseTransformation_(inverseTransformation)
-  , composedModel_(composedModel)
   , orthogonalBasis_(orthogonalBasis)
   , I_(I)
   , alpha_k_(alpha_k)
   , Psi_k_(Psi_k)
-  , composedMetaModel_()
 {
-  // The composed meta model will be a dual linear combination
-  composedMetaModel_ = DualLinearCombinationFunction(Psi_k, alpha_k);
-  if (transformation.getEvaluation().getImplementation()->getClassName() == "IdentityEvaluation")
-    metaModel_ = composedMetaModel_;
-  else
-    metaModel_ = ComposedFunction(composedMetaModel_, transformation);
-}
-
-/* Default constructor */
-FunctionalChaosResult::FunctionalChaosResult(
-    const Function & model,
-    const Distribution & distribution,
-    const Function & transformation,
-    const Function & inverseTransformation,
-    const Function & composedModel,
-    const OrthogonalBasis & orthogonalBasis,
-    const Indices & I,
-    const Sample & alpha_k,
-    const FunctionCollection & Psi_k,
-    const Point & residuals,
-    const Point & relativeErrors)
-  : MetaModelResult(Sample(), Sample(), Function(), residuals, relativeErrors)
-  , distribution_(distribution)
-  , transformation_(transformation)
-  , inverseTransformation_(inverseTransformation)
-  , composedModel_(composedModel)
-  , orthogonalBasis_(orthogonalBasis)
-  , I_(I)
-  , alpha_k_(alpha_k)
-  , Psi_k_(Psi_k)
-  , composedMetaModel_()
-{
-  model_ = model; // deprecated
   // The composed meta model will be a dual linear combination
   composedMetaModel_ = DualLinearCombinationFunction(Psi_k, alpha_k);
   if (transformation.getEvaluation().getImplementation()->getClassName() == "IdentityEvaluation")
@@ -163,13 +126,6 @@ Function FunctionalChaosResult::getTransformation() const
 Function FunctionalChaosResult::getInverseTransformation() const
 {
   return inverseTransformation_;
-}
-
-/* Composed model accessor */
-Function FunctionalChaosResult::getComposedModel() const
-{
-  LOGWARN(OSS() << "FunctionalChaosResult.getComposedModel is deprecated");
-  return composedModel_;
 }
 
 /* Orthogonal basis accessor */
